--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -6,33 +6,41 @@
     <title>My First Portfolio</title>
 </head>
 <body>
-    <h1>Welcome to My Portfolio</h1>
-    <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Embedded Tweets</title>
-</head>
-<body>
 
-    <h1>Embedded Tweets</h1>
+    <header>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
+    </header>
 
-    <p>Welcome to the Tweets page! Here you can see some of my recent tweets embedded directly into this webpage.</p>
+    <main>
+        <article>
+            <h1>Embedded Tweets</h1>
 
-    <!-- Example of an embedded tweet -->
-    <blockquote class="twitter-tweet">
-        <p lang="en" dir="ltr">Learning web development with HTML and CSS! Excited to build my first webpage. #webdev #coding</p>
-        &mdash; WebDev Enthusiast (@webdev_enth) <a href="https://twitter.com/webdev_enth/status/1234567890">March 2, 2024</a>
-    </blockquote>
-    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            <p>Welcome to the Tweets page! Here you can see some of my recent tweets embedded directly into this webpage.</p>
 
-    <h2>Back to Homepage</h2>
+            <!-- Example of an embedded tweet -->
+            <blockquote class="twitter-tweet">
+                <p lang="en" dir="ltr">Learning web development with HTML and CSS! Excited to build my first webpage. #webdev #coding</p>
+                &mdash; WebDev Enthusiast (@webdev_enth) <a href="https://twitter.com/webdev_enth/status/1234567890">March 2, 2024</a>
+            </blockquote>
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
-    <p>If you'd like to return to the homepage, click here: <a href="index.html">Back to Home</a>.</p>
+            <h2>Back to Homepage</h2>
+
+            <p>If you'd like to return to the homepage, click here: <a href="index.html">Back to Home</a>.</p>
+        </article>
+
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
+    </main>
+
+    <footer>
+        <p>Made by Menna tallah ahmed <a href="https://www.example.com" target="_blank">here</a></p>
+    </footer>
 
 </body>
-</html>
 
-</body>
 </html>
